# portfolio

./: .gitignore  .replit  Procfile  README.md  create_superuser.py  pyproject.toml  replit.md  requirements.txt
portfolio_project/: settings.py  urls.py
portfolio_project/portfolio/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
portfolio_project/portfolio/migrations/: 0001_initial.py
templates/portfolio/: base.html  blog_detail.html  blog_list.html  contact.html  home.html  lessons.html  projects.html  skills.html
